--- a/IBM Course 6 Final Project_Jerome Quelin.ipynb
+++ b/IBM Course 6 Final Project_Jerome Quelin.ipynb
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1068,31 +1068,31 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>NUMBER_OF_INCIDENTS</th>\n",
+       "            <th>COMMUNITY_AREA_NUMBER</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>43</td>\n",
+       "            <td>25.0</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(43,)]"
+       "[(25.0,)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT COUNT(COMMUNITY_AREA_NUMBER) AS NUMBER_OF_INCIDENTS\n",
+    "SELECT COMMUNITY_AREA_NUMBER\n",
     "FROM CHICAGO_CRIME_DATA\n",
     "GROUP BY COMMUNITY_AREA_NUMBER\n",
-    "ORDER BY NUMBER_OF_INCIDENTS DESC\n",
+    "ORDER BY COUNT(COMMUNITY_AREA_NUMBER) DESC\n",
     "LIMIT 1;"
    ]
   },
